--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,13 +1,12 @@
 {
   "version":2,
-  "build":[{
-    "src":"*.js","use":"@vercel/node"
-  },
-    "routes":[
-      {
-        "src":"/(.*)",
-        "dest":"/"
-      }
-    ]
+  "build":[
+    {"src":"*.js","use":"@versel/node"} 
+  ],
+  "routes":[
+    {
+      "src":"/(.*)",
+      "dest":"/"
+    }
   ]
 }
